--- a/Project1/bunnyBake/bunnyBake/Info.plist
+++ b/Project1/bunnyBake/bunnyBake/Info.plist
@@ -67,5 +67,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Please allow access to save.</string>
 </dict>
 </plist>
