--- a/Lab6/app/src/main/AndroidManifest.xml
+++ b/Lab6/app/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/star"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/star_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lab6">
+        android:theme="@style/Theme.Horoscope">
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -18,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
