--- a/Lab6/settings.gradle
+++ b/Lab6/settings.gradle
@@ -6,5 +6,5 @@ dependencyResolutionManagement {
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "lab6"
+rootProject.name = "Lab6"
 include ':app'
