--- a/Project2/app/src/main/AndroidManifest.xml
+++ b/Project2/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/plant"
+        android:icon="@mipmap/plant_foreground"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/plant_round"
         android:supportsRtl="true"
